[package]
name = "sensor-relay"
version = "0.1.0"
authors = ["Magnus Eriksson <eriksson.mag@gmail.com>"]
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "0.4", features = ["serde", "v4"] }
rumqttc = "0.24.0"
once_cell = "1.21.3"
rand = "0.9.1"
tokio-stream = "0.1.17"
warp = "0.3.7"
